// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryDropdown renders correctly if balance history 1`] = `
<div class="history-dropdown">
  <div class="history-dropdown__link-container"><span class="history-dropdown__link-container__link">Balance History</span></div>
</div>
`;

exports[`HistoryDropdown renders correctly if credit history 1`] = `
<div class="history-dropdown">
  <div class="history-dropdown__link-container"><span class="history-dropdown__link-container__link">Credits History</span></div>
</div>
`;
